--- a/app/sass/content/_home-content.scss
+++ b/app/sass/content/_home-content.scss
@@ -910,11 +910,13 @@
     margin-bottom: 18px;
     margin-right: 19px;
     float: right;
+    z-index: 1;
   }
   .separator {
     top: 19px;
     width: 145px;
     left: 48%;
+    z-index: 0;
     @include breakpoint(max-width 770px) {
       display: none;
     }
