--- a/app/sass/header/_navigation.scss
+++ b/app/sass/header/_navigation.scss
@@ -26,7 +26,7 @@
     margin-top: 37px;
     position: absolute;
     left: 0;
-    z-index: 10;
+    z-index: 3;
     background-color: white;
   }
   li {
@@ -132,7 +132,7 @@
   width: 40px;
   height: 40px;
   position: absolute;
-  z-index: 6;
+  z-index: 1;
   border: none;
   right: 10px;
   top: 0;
@@ -155,7 +155,7 @@
   left: 0;
   right: 0;
   margin: auto;
-  z-index: 200;
+  z-index: 2;
 }
 
 .sw-topper {
